lang/tests/contract/common/ui/fail/30-invalid-meta-info-key-1.stderr
error: unknown parameter: `invalid_key`
 --> $DIR/30-invalid-meta-info-key-1.rs:3:39
  |
3 | #[liquid::contract(version = "0.2.0", invalid_key = "whatever")]
  |                                       ^^^^^^^^^^^
